# dcapy

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: autopy-lot.yml  ci.yml  jup_to_md.yml  notebook_to_yml  test.yml
cashflow-reference/: index.html
dca-reference/: index.html
dcapy/: __init__.py
dcapy/auth/: __init__.py  auth.py
dcapy/cashflow/: __init__.py  cashflow.py
dcapy/console/: __init__.py  console.py
dcapy/dca/: __init__.py  arps.py  dca.py  schedule.py  timeconverter.py  wor.py
dcapy/filters/: __init__.py  filters.py
dcapy/models/: __init__.py  cashflow.py  schedule.py  wells.py
dcapy/schedule/: __init__.py  schedule.py
dcapy/weiner/: __init__.py  brownian.py  test.ipynb
dcapy/wiener/: __init__.py  brownian.py
docs/: cashflow-reference.md  conf.py  dca-reference.md  dcapy.dca.rst  dcapy.rst  filters-reference.md  index.md  index.rst  models-reference.md  modules.rst  release_notes.md  schedule-reference.md  weiner-reference.md  wiener-reference.md
docs/css/: custom.css
docs/examples/: 1-Intro.md
docs/tutorial/: 1-Intro.md  1a-Tutorial-Arps_basic_dca.md  1c-Tutorial-Wor_basic.md  4a-Tutorial_Scheduling_intro.md  5a-CloudAPI.md
examples/: 1-Period_test.ipynb  Arps_basic_dca.ipynb  Schedule_test.ipynb  Weiner_procces.ipynb  arps_test3.py  arps_test4.py  cashflow.py  cashflow_test1.py  example_feb.py  gen_cashflow.py  period_test.py  period_test_arps.py  period_test_wor.py  scenario_test.py  schedule2.ipynb  test2.py  test5.ipynb  test_dca.ipynb  wor_test1.py  wor_test2.py
examples/1-Intro/: index.html
examples/1-basics/: 1a-Tutorial-Arps_basic_dca.ipynb  1b-Tutorial-Arps_Class.ipynb  1c-Tutorial-Wor_basic.ipynb  1e-Tutorial_Fit data.ipynb  Arps_basic_dca.ipynb  Fitted.ipynb  arps_test1.py  arps_test2.py  prod.csv  prod.csv:Zone.Identifier  prod_wor.csv  wor_test1.py  wor_test2.py
examples/2-cashflow/: 2a-Cashflow Basics.ipynb
examples/2-schedules/: 1-Period_test.ipynb  1-Period_test_wor.ipynb  2-Scenario_test.ipynb  2-Scenario_test_wor.ipynb  3-Depends.ipynb  4-DCACashFlow.ipynb  4-DCACashFlow_int.ipynb  4-ti_test.py  period_test_wor.py  scenario_test.py  schedule2.ipynb
examples/3-Wiener/: 3-Wiener_procces.ipynb
examples/3-wells/: dcafile.yml  yml_test.ipynb
examples/3-yaml/: period_arps.yml  scenario_arps.yml  yml_files.ipynb
examples/4-schedules/: 1-Period_test.ipynb  1-Period_test_wor.ipynb  3-Depends.ipynb  (+7 more)
filters-reference/: index.html
release_notes/: index.html
schedule-reference/: index.html
search/: search_index.json
test/: test_arps_basics.py  test_cashflow.py  test_schedule.py  test_wiener.py  test_wor_basics.py
wiener-reference/: index.html
(+91 files in other folders)
