[tool.poetry]
name = "dcapy"
version = "0.1.0"
description = "DCA Forecast Workflows"
authors = ["Santiago Cuervo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scipy = "^1.6.1"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
notebook = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
