[tool.poetry]
name = "dcapy"
version = "0.1.14"
description = "Oil and Gas DCA Workflows"
authors = ["Santiago Cuervo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

# Numpy needs two specs to work with python 3.7 and 3.8
# https://stackoverflow.com/questions/72346789/poetry-first-added-library-version-higher-than-allowed-by-project-python-versio
# since this project is supposed to support 3.8+ and not necessarily <3.8 changing to 1.22
numpy = "^1.22"
pandas = [
    {version = "^1.2.3", python = "<3.11"},
    {version = "^2.0.0", python = "^3.11"}
]
matplotlib = "^3.3.4"
seaborn = "^0.11.1"

# scipy fails PEP 517 builds
scipy = [
    {version = "<1.9.0", python = "<3.10"},
    {version = "^1.9.0", python = "^3.10"}
]
pydantic = "^1.8.1"
numpy-financial = "^1.0.0"

# pyyaml poetry install breaks with <6 for 3.10 and above
# fixing to 6 and above owing to change in test_schedule needed to support 3.10
PyYAML = "^6.0.0"

# statsmodels (0.12.2) not supporting PEP 517 builds. 0.13 works with python 3.8.
statsmodels = "^0.13"
openpyxl = "^3.0.7"
pyDOE2 = "^1.3.0"
rich = "^10.2.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
notebook = "^6.2.0"
ipykernel = "^5.5.0"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.3.23"
mkdocs-material = "^7.0.6"
mkdocstrings = "^0.15.0"
mkdocs-jupyter = "^0.17.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
